--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -17,6 +17,7 @@
         android:textStyle="bold"
         android:textColor="#263238"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp" />
 
 </FrameLayout>
